# frog

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: CryptoPrimitive.h  FileReceiver.h  FileSender.h  GWASExecutor.h  OrderReceiver.h  OrderSender.h  ServerOptThread.h  define.h  json11.h  server.h
scripts/: process.sh  test_client.sh  test_server.sh  upload.sh
src/Enclave/: Makefile  buildenv.mk
src/Enclave/EnclaveBudget/: EnclaveBudget.cc  EnclaveBudget.edl  EnclaveBudget.h  EnclaveBudget_private.pem  EnclaveBudget_t.c  EnclaveBudget_t.h  EnclaveBudget_u.c  EnclaveBudget_u.h  EnclaveMessageExchange.cc  Makefile  Utility_E1.cc  Utility_E1.h  tmp
src/Enclave/EnclaveCompute/: EnclaveCompute.cc  EnclaveCompute.config.xml  EnclaveCompute.edl  EnclaveCompute.h  EnclaveCompute_private.pem  EnclaveCompute_t.c  EnclaveCompute_t.h  EnclaveCompute_u.c  EnclaveCompute_u.h  EnclaveMessageExchange.cc  Makefile  Utility_E2.cc  tmp
src/Enclave/Include/: dh_session_protocol.h
src/app/: client.cc  compress_vcf.cc  server.cc
src/client/: FileSender.cc  OrderSender.cc
src/comm/: CryptoPrimitive.cc  json11.cc
src/server/: FileReceiver.cc  GWASExecutor.cc  OrderReceiver.cc  ServerOptThread.cc  UntrustedEnclaveMessageExchange.cc
